# Appwrite

./: Cargo.toml  Shuttle.toml
.github/workflows/: tar.yml
src/: main.js
